--- a/style.css
+++ b/style.css
@@ -28,8 +28,29 @@ HTML {
     visibility: hidden;
 }
 
-span {
-    color:#f3df00;
+h1 {
+    font-size:40px;
+    text-shadow:2px 2px #3a89a4;
+    text-transform:uppercase;
+}
+
+h2 {
+    text-align:center;
+    margin-bottom:40px;
+    color:black;
+    font-size:40px;
+    text-shadow:2px 2px #3a89a4;
+    text-transform:uppercase;
+}
+
+p {
+    padding:0 20px;
+    display:flex;
+    text-align:center;
+    line-height:35px;
+    letter-spacing:0.5px;
+    color:#1B3139;
+    font-size:22px;
 }
 
 
@@ -44,7 +65,7 @@ span {
 
 .header {
     display: inline-block;
-    background-color: #3a89a4;
+    background-color: #bb3928;
     position: fixed;
     top: 0;
     width: 100%;
@@ -62,15 +83,15 @@ span {
 }
 
 .menu {
-  margin: 0 80px 0 0;
+      margin: 0 80px 0 0;
 }
 
 .menu a {
-  text-decoration:none;
-  margin:0 10px;
-  line-height:80px;
-  color:#fafae6;
-  padding:5px;
+    text-decoration:none;
+    margin:0 10px;
+    line-height:80px;
+    color:#fafae6;
+    padding:5px;
 }
 
 .menu a:hover {
@@ -78,16 +99,16 @@ span {
 }
 
 label {
-  width:10px;
-  float:right;
-  margin: 0 40px 0 0 ;
-  font-size:26px;
-  line-height:70px;
-  display:none;
+    width:10px;
+    float:right;
+    margin: 0 40px 0 0 ;
+    font-size:26px;
+    line-height:70px;
+    display:none;
 }
 
 #toggle {
-  display:none;
+    display:none;
 }
 
 
@@ -109,7 +130,7 @@ label {
 .background.about {
     display:flex;
     flex-direction:column;
-    background-color: #f3df00;
+    background-color: #3a89a4;
     background-size:cover;
     width:100%;
     height:auto;
@@ -124,7 +145,7 @@ label {
     display:flex;
     flex-direction:row;
     margin:auto;
-    background-color:rgba(255,255,255,0.4);
+    background-color:rgba(255,255,255,0.3);
 }
 
 .circle-images {
@@ -141,7 +162,7 @@ label {
     height:130px;
     width:130px;
     border-radius:50%;
-    border:8px solid #3a89a4;
+    border:8px solid #fafae6;
 }
 
 .text-box {
@@ -151,22 +172,6 @@ label {
     flex-direction:column;
     justify-content:center;
     align-items:center;
-}
-
-h1 {
-    font-size:40px;
-    text-shadow:2px 2px #3a89a4;
-    text-transform:uppercase;
-}
-
-.text-box p {
-    padding:0 20px;
-    display:flex;
-    text-align:center;
-    line-height:35px;
-    letter-spacing:0.5px;
-    color:#545050;
-    font-size:22px;
 }
 
 .image-box {
@@ -187,7 +192,7 @@ h1 {
 .background.music {
     display:flex;
     flex-direction:column;
-    background-color: #e39134;
+    background-color: #f3df00;
     background-size:cover;
     width:100%;
     height:auto;
@@ -203,25 +208,6 @@ h1 {
     border-radius:4rem;
 }
 
-.music-table-text p {
-    padding:0 20px;
-    display:flex;
-    text-align:center;
-    line-height:40px;
-    letter-spacing:0.5px;
-    color:#545050;
-    font-size:25px;
-}
-
-.music-table-text h2 {
-    text-align:center;
-    margin-bottom:40px;
-    color:black;
-    font-size:40px;
-    text-shadow:2px 2px #3a89a4;
-    text-transform:uppercase;
-}
-
 .music-table {
     display: flex;
     justify-content: space-between;
@@ -232,7 +218,7 @@ h1 {
 
 .music-col {
     padding:10px;
-    border:1px solid black;
+    border:1px solid #3a89a4;
 }
 
 .music-col a {
@@ -254,8 +240,6 @@ h1 {
     height:110px;
     width:110px;
     border-radius:50%;
-    margin-right:15px;
-    margin-bottom:10px;
     transition:0.5s linear;
 }
 
@@ -264,10 +248,10 @@ tr {
 }
 
 .music-col, .music-col a {
-  background-color:#fafae6;
-  color:black;
-  text-transform:uppercase;
-  transition:0.5s linear;
+    background-color:#fafae6;
+    color:#1B3139;
+    text-transform:uppercase;
+    transition:0.5s linear;
 }
 
 td {
@@ -349,7 +333,7 @@ td:hover {
 .background.events {
     display:flex;
     flex-direction:column;
-    background-color: #d92b39;
+    background-color: #e39134;
     background-size:cover;
     width:100%;
     height:auto;
@@ -362,43 +346,35 @@ td:hover {
     align-items:center;
     margin:auto;
     width:80%;
-    padding-bottom:30px;
     justify-content:space-around;
+    background-color:rgba(255,255,255,0.3);
+    border-radius:4rem;
 }
 
 .events-img-txt img {
-    width:450px;
-    height:auto;
+    width:auto;
+    height:250px;
+    border-radius:50%;
 }
 
-.events-text {
-    background-color:rgba(255,255,255,0.4);
-    border-radius:4rem;
-    padding: 10px 30px;
-    margin:auto;
+.events-text {   
     text-align:left;
-    width:80%;
-}
-
-.events-text h2 {
-    text-transform:uppercase;
-    color:#fafae6;
-    font-size:40px;
-    text-shadow:2px 2px #3a89a4;
+    width:50%;
 }
 
 .events-text p {
-    padding:0 20px;
+    display:flex;
+    text-align:left;
     line-height:35px;
     letter-spacing:0.5px;
-    color:#fafae6;
-    font-size:20px;
+    color:#1B3139;
+    font-size:22px;
 }
 
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     border-radius: 4px;
     box-sizing: border-box;
     margin-top: 6px;
@@ -407,8 +383,8 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #3a89a4;
+    color: #fafae6;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -416,38 +392,28 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #fafae6;
+    color:#3a89a4;
 }
 
-.container.contact {
-    padding: 20px;
+.container.contact {  
     width:50%;
     display:flex;
+    flex-direction:column;
+    margin:auto;
+    padding-top:20px
 }
-
-.socialmedia-icons i {
-  color:#fafae6;
-  padding:20px;
-}
-
-.socialmedia-icons i:hover {
-  color:#f3df00;
-}
-
-
 
 
 /*-------------------------------- footer ----------------------*/
 
 .footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #3a89a4;
-  color: #fafae6;
-  text-align: center;
-  height:100%;
-  padding-top:1rem;
+   width: 100%;
+    background-color: #bb3928;
+    color: #fafae6;
+    text-align: center;
+    height: 40px;
+    padding-top: 1rem;
 }
 
 
